--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,2 @@
-<h1>
-  {{ test }}
-</h1>
 
-<button (click)="changeTest()">save</button>
-<br>
-<input [type]="test"/>
-<br>
-<input [(ngModel)]="test"/>
+<app-layout></app-layout>
